feat: add controlled implementation execution runtime